feat: add navbar

--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -1,1 +1,16 @@
-<p>navbar works!</p>
+<div class="flex items-center justify-between px-28 py-2 my-6">
+    <div>
+        <span style="font-family: 'Avenida';"
+        class="text-6xl">AJU FILMS</span>
+    </div>
+    <div class="flex items-center gap-x-72">
+        <nav>
+            <ul class="flex gap-16">
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Como Funciona</a></li>
+                <li><a href="#">Galeria</a></li>
+            </ul>
+        </nav>
+        <button class="bg-stone-50 text-stone-950 py-2 px-4 rounded-full font-medium">Fazer orçamento</button>
+    </div>
+</div>
