--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+    font-family: 'Avenida';
+    src: url(../public/fonts/avenida-std.otf);
+}
+
 :root {
     color-scheme: dark;
 }
