feat(home): add statistics card to main content

--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-between px-28 py-2 my-6">
+<div class="flex items-center justify-between px-28 py-2 my-6 absolute w-full z-10 text-white">
     <div>
         <span style="font-family: 'Avenida';"
         class="text-6xl">AJU FILMS</span>
