--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -1,7 +1,9 @@
-<div class="flex items-center justify-between px-28 py-2 my-6 absolute w-full z-10 text-white">
+<div class="flex items-center justify-between px-28 py-2 my-6 w-full z-10 text-white sticky top-0 -mt-[7rem]
+transition-all"
+[ngClass]="{'backdrop-blur-sm bg-black bg-opacity-40': isScrolled}">
     <div>
         <span style="font-family: 'Avenida';"
-        class="text-6xl">AJU FILMS</span>
+        class="text-5xl">AJU FILMS</span>
     </div>
     <div class="flex items-center gap-x-72">
         <nav>
@@ -11,6 +13,6 @@
                 <li><a href="#">Galeria</a></li>
             </ul>
         </nav>
-        <button class="bg-stone-50 text-stone-950 py-2 px-4 rounded-full font-medium">Fazer orçamento</button>
+        <button class="bg-stone-50 text-stone-950 py-2 px-4 rounded-full text-sm font-medium">Fazer orçamento</button>
     </div>
 </div>
