feat(home): set main-card-info text

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,24 +1,26 @@
-<div class="img-container relative max-h-screen rounded-b-3xl overflow-hidden pt-28">
+<div class="img-container relative max-h-screen rounded-b-[2em] overflow-hidden bg-black">
     <img src="/images/windows.jpg" alt="Janela de prédio com vista para a cidade"
-    class="absolute building max-h-full w-full object-cover">
+    class="absolute building max-h-full w-full object-cover opacity-80">
 
     <main class="c-container z-10 h-full grid grid-cols-2 gap-6">
         <header class="relative text-white self-center">
-            <p class="text-xl">#1 Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-            <h1 class="title font-medium">A proteção que seu ambiente precisa!</h1>
+            <p class="text-xl font-light">Serviço número 01 de películas em Aracaju</p>
+            <h1 class="title font-medium leading-tight">A proteção que seu ambiente precisa!</h1>
+            <button class="bg-stone-50 text-stone-950 py-2 px-6 rounded-full text-lg font-semibold mt-4">Fazer orçamento</button>
         </header>
-        <div class="main-card-info bg-white self-end absolute right-0 max-w-[50%] p-6 rounded-tl-3xl flex items-center gap-6">
-            <div class="">
-                <h2 class="font-medium text-6xl mb-2">300</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing..</p>
+        <div class="main-card-info bg-white self-end absolute right-0 max-w-[50%] p-8 rounded-tl-3xl flex items-start 
+        gap-6">
+            <div class="flex-1">
+                <h2 class="font-medium text-5xl mb-2 text-nowrap">10 anos</h2>
+                <p>de excelência em aplicação de películas em residências</p>
             </div>
-            <div class="">
-                <h2 class="font-medium text-6xl mb-2">300</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing..</p>
+            <div class="flex-1">
+                <h2 class="font-medium text-5xl mb-2 text-nowrap">2.500+</h2>
+                <p>janelas transformadas com películas de alta performance</p>
             </div>
-            <div class="">
-                <h2 class="font-medium text-6xl mb-2">300</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing..</p>
+            <div class="flex-1">
+                <h2 class="font-medium text-5xl mb-2 text-nowrap">15 tipos</h2>
+                <p>de películas para garantir proteção solar, privacidade, segurança e estética.</p>
             </div>
         </div>
     </main>
