feat(home): add quality slogan text

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="img-container relative max-h-screen rounded-b-[2em] overflow-hidden bg-black">
+<div class="img-container relative max-h-screen rounded-b-[2em] overflow-hidden">
     <img src="/images/windows.jpg" alt="Janela de prédio com vista para a cidade"
-    class="absolute building max-h-full w-full object-cover opacity-80">
+    class="absolute building max-h-full w-full object-cover brightness-75 rounded-br-[3rem]">
 
     <main class="c-container z-10 h-full grid grid-cols-2 gap-6">
         <header class="relative text-white self-center">
@@ -12,20 +12,29 @@
         gap-6">
             <div class="flex-1">
                 <h2 class="font-medium text-5xl mb-2 text-nowrap">10 anos</h2>
-                <p>de excelência em aplicação de películas em residências</p>
+                <p class="text-gray-600">de excelência em aplicação de películas em residências</p>
             </div>
             <div class="flex-1">
                 <h2 class="font-medium text-5xl mb-2 text-nowrap">2.500+</h2>
-                <p>janelas transformadas com películas de alta performance</p>
+                <p class="text-gray-600">janelas transformadas com películas de alta performance</p>
             </div>
             <div class="flex-1">
                 <h2 class="font-medium text-5xl mb-2 text-nowrap">15 tipos</h2>
-                <p>de películas para garantir proteção solar, privacidade, segurança e estética.</p>
+                <p class="text-gray-600">de películas para garantir proteção solar, privacidade, segurança e estética.</p>
             </div>
         </div>
     </main>
 </div>
 
-<div class="main h-96">
-    <h1 class="">Ola</h1>
-</div>
+<section class="c-container py-36 flex gap-12 items-center text-gray-600">
+    <h3 class="text-4xl flex-1"><span class="text-black font-medium">Priorizamos qualidade,</span> garantindo a confiança dos nossos clientes em cada serviço.</h3>
+    <p class="flex-1">Oferecemos películas residenciais que garantem proteção solar, aumentam a privacidade e 
+        reduzem o consumo de energia. Nossas soluções melhoram o conforto térmico e protegem sua casa
+         dos danos UV. A escolha ideal para quem busca mais qualidade de vida e economia.</p>
+</section>
+
+<section class="bg-slate-200">
+    <div class="c-container">
+        <app-cards-section/>
+    </div>
+</section>
