feat(cards-section): add  new cards section

--- a/src/app/components/layout/cards-section/cards-section.component.html
+++ b/src/app/components/layout/cards-section/cards-section.component.html
@@ -1,1 +1,68 @@
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo amet molestiae minus optio quis, dignissimos recusandae eius laborum? Quia totam quis suscipit ipsum nam! Vel.
+<div class="grid grid-cols-[repeat(auto-fit,_minmax(350px,_1fr))] m-px rounded-xl border border-gray-200 overflow-clip gap-px
+bg-gray-200">
+    <div class="bg-white flex flex-col items-start gap-8 p-8">
+        <div class="p-4 shadow-md rounded-lg">
+            <i class="fi fi-br-time-fast flex text-primary text-xl"></i>
+        </div>
+        <div>
+            <h4 class="font-medium text-xl leading-8">Instalação no Mesmo Dia</h4>
+            <p class="text-gray-600">Agende a aplicação no mesmo dia e transforme seu lar. Verifique a disponibilidade!</p>
+        </div>
+    </div>
+
+    <div class="bg-white flex flex-col items-start gap-8 p-8">
+        <div class="p-4 shadow-md rounded-lg">
+            <i class="fi fi-br-research-arrows-circle flex text-primary text-xl"></i>
+        </div>
+        <div>
+            <h4 class="font-medium text-xl leading-8">Economia de Energia</h4>
+            <p class="text-gray-600">Reduza o consumo de energia mantendo sua casa na temperatura ideal.</p>
+        </div>
+    </div>
+
+
+    <div class="bg-white flex flex-col items-start gap-8 p-8">
+        <div class="p-4 shadow-md rounded-lg">
+            <i class="fi fi-br-low-vision flex text-primary text-xl"></i>
+        </div>
+        <div>
+            <h4 class="font-medium text-xl leading-8">Privacidade Sob Medida</h4>
+            <p class="text-gray-600">Garantimos privacidade sem bloquear a luz natural, com tecnologia de controle de visibilidade.</p>
+        </div>
+    </div>
+    
+    <div class="bg-white flex flex-col items-start gap-8 p-8">
+        <div class="p-4 shadow-md rounded-lg">
+            <i class="fi fi-br-brightness flex text-primary text-xl"></i>
+        </div>
+        <div>
+            <h4 class="font-medium text-xl leading-8">Proteção Solar</h4>
+            <p class="text-gray-600">Bloqueie até 99% dos raios UV, protegendo sua casa e preservando seus móveis.</p>
+        </div>
+    </div>
+
+
+    <div class="bg-white flex flex-col items-start gap-8 p-8">
+        <div class="p-4 shadow-md rounded-lg">
+            <i class="fi fi-br-shield-check flex text-primary text-xl"></i>
+        </div>
+        <div>
+            <h4 class="font-medium text-xl leading-8">Durabilidade e Resistência</h4>
+            <p class="text-gray-600">Películas de alta qualidade, resistentes a arranhões e fáceis de manter.</p>
+        </div>
+    </div>
+
+
+    <div class="bg-white flex flex-col items-start gap-8 p-8">
+        <div class="p-4 shadow-md rounded-lg">
+            <i class="fi fi-br-graphic-style flex text-primary text-xl"></i>
+        </div>
+        <div>
+            <h4 class="font-medium text-xl leading-8">Acabamentos Modernos</h4>
+            <p class="text-gray-600">Películas com design sofisticado contendo várias opções de acabamento para seu espaço.
+            </p>
+        </div>
+    </div>
+
+    
+</div>
