--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -33,8 +33,11 @@
          dos danos UV. A escolha ideal para quem busca mais qualidade de vida e economia.</p>
 </section>
 
-<section class="bg-slate-200">
-    <div class="c-container">
+<section class="bg-gray-100">
+    <div class="c-container py-36">
+        <h1 class="font-normal text-5xl max-w-2xl text-center mx-auto text-gray-600 mb-16">
+            <span class="text-black">Oferecemos qualidade,</span> com os melhores materiais e serviço
+        </h1>
         <app-cards-section/>
     </div>
 </section>
