--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -3,7 +3,7 @@ transition-all"
 [ngClass]="{'backdrop-blur-sm bg-black bg-opacity-40': isScrolled}">
     <div>
         <span style="font-family: 'Avenida';"
-        class="text-5xl">AJU FILMS</span>
+        class="text-[3.7rem] leading-none">AJU FILMS</span>
     </div>
     <div class="flex items-center gap-x-72">
         <nav>
