feat(video-card): add new video cards

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,7 +26,7 @@
     </main>
 </div>
 
-<section class="c-container py-36 flex gap-12 items-center text-gray-600">
+<section class="c-container py-32 flex gap-12 items-center text-gray-600">
     <h3 class="text-4xl flex-1"><span class="text-black font-medium">Priorizamos qualidade,</span> garantindo a confiança dos nossos clientes em cada serviço.</h3>
     <p class="flex-1">Oferecemos películas residenciais que garantem proteção solar, aumentam a privacidade e 
         reduzem o consumo de energia. Nossas soluções melhoram o conforto térmico e protegem sua casa
@@ -34,10 +34,19 @@
 </section>
 
 <section class="bg-gray-100">
-    <div class="c-container py-36">
+    <div class="c-container py-32">
         <h1 class="font-normal text-5xl max-w-2xl text-center mx-auto text-gray-600 mb-16">
             <span class="text-black">Oferecemos qualidade,</span> com os melhores materiais e serviço
         </h1>
         <app-cards-section/>
+    </div>
+</section>
+
+<section>
+    <div class="c-container py-32">
+        <h1 class="font-normal text-5xl max-w-2xl text-center mx-auto text-gray-600 mb-16">
+            Acompanhe alguns de nossos projetos e veja a <span class="text-black">qualidade do nosso trabalho</span>
+        </h1>
+        <app-video-card/>
     </div>
 </section>
