--- a/src/app/components/layout/cards-section/cards-section.component.html
+++ b/src/app/components/layout/cards-section/cards-section.component.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-[repeat(auto-fit,_minmax(350px,_1fr))] m-px rounded-xl border border-gray-200 overflow-clip gap-px
+<div class="grid grid-cols-[repeat(auto-fit,_minmax(350px,_1fr))] m-px rounded-3xl border border-gray-200 overflow-clip gap-px
 bg-gray-200">
 
     @for(card of cards; track $index) {
