--- a/src/app/components/layout/video-card/video-card.component.html
+++ b/src/app/components/layout/video-card/video-card.component.html
@@ -12,9 +12,9 @@
                     <p class="text-gray-600">{{card.footer1}} <span class="text-black font-medium">{{card.footer2}}</span></p>
                 </div>
                 <div class="h-full flex-shrink-0 p-3">
-                    <video #videoRef class="max-h-full w-80 object-cover rounded-2xl" [muted]="true" autoplay
-                    (timeupdate)="updateProgress(videoRef)" (click)="togglePause(videoRef)" (ended)="onVideoEnd()">
-                        <source [src]="card.videoUrl" type="video/mp4">
+                    <video #videoRef videoLazyLoad class="max-h-full w-80 object-cover rounded-2xl" [muted]="true" autoplay
+                    (timeupdate)="updateProgress(videoRef)" (click)="togglePause(videoRef)" (ended)="onVideoEnd()"
+                    [attr.data-src]="card.videoUrl" type="video/mp4">
                     </video>
                 </div>
             </div>
@@ -25,14 +25,14 @@
 <div class="flex items-center justify-center mt-6 gap-6">
     @for (card of videoCards; track card.id) {
         <div class="flex flex-col gap-2">
-            <div class="h-[2px] bg-gray-300">
-                <div class="h-[2px] bg-green-400 transition-all ease-linear" [style.width.%]="card.progress"></div>
+            <div class="h-[3px] bg-gray-200">
+                <div class="h-[3px] bg-green-400 transition-all ease-linear" [style.width.%]="card.progress"></div>
             </div>
             <div class="hover:text-black transition-colors cursor-pointer flex items-center gap-2"
             [ngClass]="{'text-black' : card.id === selectedVideoCard, 'text-gray-400': card.id !== selectedVideoCard}"
             (click)="setVideoCard(card.id)">
                 <i [class]="'fi flex ' + card.barIcon"></i>
-                <span class="font-medium">{{card.barText}}</span>
+                <span class="font-light text-sm">{{card.barText}}</span>
             </div>
         </div>
     }
