feat(home): add responsivity

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,26 +1,27 @@
 <div class="img-container relative max-h-screen rounded-b-[0em] overflow-hidden">
     <img src="/images/windows.jpg" alt="Janela de prédio com vista para a cidade"
-    class="absolute building max-h-full w-full object-cover brightness-75 rounded-br-[3rem]">
+    class="absolute building h-full w-full object-cover brightness-75">
 
-    <main class="c-container z-10 h-full grid grid-cols-2 gap-6">
-        <header class="relative text-white self-center">
+    <main class="c-container z-10 h-full grid grid-cols-1 lg:grid-cols-2 gap-6">
+        <header class="relative text-white self-center flex flex-col items-center text-center -mt-28 md:mt-0 md:text-start md:items-start">
             <p class="text-xl font-light">Serviço número 01 de películas em Aracaju</p>
-            <h1 class="title font-medium leading-tight">A proteção que seu ambiente precisa!</h1>
+            <h1 class="text-[3.5rem] xs:text-[4.2rem] font-medium leading-tight max-w-2xl">A proteção que seu ambiente precisa!</h1>
             <button class="bg-stone-50 text-stone-950 py-2 px-6 rounded-full text-lg font-semibold mt-4">Fazer orçamento</button>
         </header>
-        <div class="main-card-info bg-white self-end absolute right-0 max-w-[50%] p-8 rounded-tl-3xl flex items-start 
-        gap-6">
+        <div class="main-card-info bg-white self-end absolute translate-x-1/2 right-1/2 md:translate-x-0 md:right-0 
+        w-[calc(100%-40px)] sm:w-[calc(100%-80px)] md:max-w-[50%] xl:p-8 p-5 md:rounded-tr-none rounded-tr-3xl 
+        rounded-tl-3xl flex items-start gap-6">
             <div class="flex-1">
-                <h2 class="font-medium text-5xl mb-2 text-nowrap">10 anos</h2>
-                <p class="text-gray-600">de excelência em aplicação de películas em residências</p>
+                <h2 class="font-medium xl:text-5xl text-3xl mb-2 text-nowrap">10 anos</h2>
+                <p class="text-gray-600 xl:text-base text-sm">de excelência em aplicação de películas em residências</p>
             </div>
             <div class="flex-1">
-                <h2 class="font-medium text-5xl mb-2 text-nowrap">2.500+</h2>
-                <p class="text-gray-600">janelas transformadas com películas de alta performance</p>
+                <h2 class="font-medium xl:text-5xl text-3xl mb-2 text-nowrap">2.500+</h2>
+                <p class="text-gray-600 xl:text-base text-sm">janelas transformadas com películas de alta performance</p>
             </div>
             <div class="flex-1">
-                <h2 class="font-medium text-5xl mb-2 text-nowrap">15 tipos</h2>
-                <p class="text-gray-600">de películas para garantir proteção solar, privacidade, segurança e estética.</p>
+                <h2 class="font-medium xl:text-5xl text-3xl mb-2 text-nowrap">15 tipos</h2>
+                <p class="text-gray-600 xl:text-base text-sm">de películas para garantir proteção solar, privacidade, segurança e estética.</p>
             </div>
         </div>
     </main>
