--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,5 +1,8 @@
 .building {
-    object-position: 0 -7rem;
+    @media screen and (min-width: 1280px) {
+        object-position: 0 -7rem;
+    }
+    object-position: unset;
     top: 0;
 }
 
@@ -8,14 +11,10 @@
 }
 
 
-.title {
-    font-size: 4.2rem;
-}
-
 .main-card-info {
     --border--width: .75rem;
     --border-radius: 2.6rem;
-    &::before {
+    &::after, &::before {
         content: '';
         display: block;
         position: absolute;
@@ -23,6 +22,8 @@
         aspect-ratio: 1/1;
         border-color: white;
         border-width: var(--border--width);
+    }
+    &::before {
         right: 100%;
         bottom: 0;
         transform: translate(var(--border--width), var(--border--width));
@@ -30,4 +31,13 @@
         border-top: 0;
         border-left: 0;
     }
+    &::after {
+        left: 100%;
+        bottom: 0;
+        transform: translate(calc(var(--border--width) * -1), var(--border--width)) rotate(270deg);
+        border-top-left-radius: var(--border-radius);
+        border-bottom: 0;
+        border-right: 0;
+    }
+
 }
