feat(video-card): add responsivity

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,7 +13,7 @@
         rounded-tl-3xl flex items-start gap-6">
             <div class="flex-1">
                 <h2 class="font-medium xl:text-5xl text-3xl mb-2 text-nowrap">10 anos</h2>
-                <p class="text-gray-600 xl:text-base text-sm">de excelência em aplicação de películas em residências</p>
+                <p class="text-gray-600 xl:text-base text-sm">de excelência em aplicação de películas em residências e comércios</p>
             </div>
             <div class="flex-1">
                 <h2 class="font-medium xl:text-5xl text-3xl mb-2 text-nowrap">2.500+</h2>
