--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -2,12 +2,12 @@
 transition-all border-b"
 [ngClass]="{
     'bg-black bg-opacity-20 border-gray-300 border-b': isScrolled && !isScrolledLimit,
-    'text-black bg-white backdrop-blur-sm bg-opacity-10 border-b border-gray-300': isScrolledLimit,
+    'text-black bg-white backdrop-blur-sm bg-opacity-15 border-b border-gray-300': isScrolledLimit,
     'text-white border-transparent': !isScrolledLimit,
     }">
     <div>
         <span style="font-family: 'Avenida';"
-        class="text-5xl sm:text-[3.7rem] leading-none text-nowrap">AJU FILMS</span>
+        class="text-[3.7rem] leading-none text-nowrap">AJU FILMS</span>
     </div>
     <div class="flex flex-grow justify-between items-center">
         <nav class="mx-auto">
@@ -17,7 +17,7 @@ transition-all border-b"
                 <li class="hidden lg:inline"><a href="#">Contato</a></li>
             </ul>
         </nav>
-        <button class="py-2 px-4 rounded-full text-[.7rem] font-medium sm:text-sm transition-colors"
+        <button class="py-2 px-4 rounded-full font-medium text-sm transition-colors"
         [ngClass]="{
             'bg-stone-950 text-stone-50 hover:bg-stone-700': isScrolledLimit,
             'bg-stone-50 text-stone-950 hover:bg-stone-200': !isScrolledLimit
