--- a/src/app/components/layout/video-card/video-card.component.html
+++ b/src/app/components/layout/video-card/video-card.component.html
@@ -2,17 +2,17 @@
 
     @for (card of videoCards; track card.id) { 
         @if(card.id === selectedVideoCard) {
-            <div class="flex gap-12 h-[25rem]" @fadeInOut>
-                <div class="flex flex-col flex-grow justify-between p-10">
+            <div class="flex flex-col-reverse sm:flex-row gap-0 lg:gap-12 max-h-full sm:h-[25rem]" @fadeInOut>
+                <div class="flex flex-col flex-grow justify-between gap-6 p-10">
                     <div>
-                        <h2 class="text-2xl font-bold mb-10">{{card.title}}</h2>
+                        <h2 class="text-2xl font-bold mb-4 md:mb-10">{{card.title}}</h2>
                         <p class="text-gray-600 text-lg mb-6">{{card.description}}</p>
                         <button class="bg-green-400 py-2 px-6 text-lg font-medium rounded-full">Solicitar orçamento</button>
                     </div>
                     <p class="text-gray-600">{{card.footer1}} <span class="text-black font-medium">{{card.footer2}}</span></p>
                 </div>
                 <div class="h-full flex-shrink-0 p-3">
-                    <video #videoRef videoLazyLoad class="max-h-full w-80 object-cover rounded-2xl" [muted]="true" autoplay
+                    <video #videoRef videoLazyLoad class="max-h-full aspect-[1.4/1] mx-auto w-[min(600px,100%)] sm:aspect-auto sm:h-auto sm:w-60 md:w-80 object-cover rounded-2xl" [muted]="true" autoplay
                     (timeupdate)="updateProgress(videoRef)" (click)="togglePause(videoRef)" (ended)="onVideoEnd()"
                     [attr.data-src]="card.videoUrl" type="video/mp4">
                     </video>
@@ -24,7 +24,7 @@
 
 <div class="flex items-center justify-center mt-6 gap-6">
     @for (card of videoCards; track card.id) {
-        <div class="flex flex-col gap-2">
+        <div class="flex flex-col gap-2 justify-center">
             <div class="h-[3px] bg-gray-200">
                 <div class="h-[3px] bg-green-400 transition-all ease-linear" [style.width.%]="card.progress"></div>
             </div>
