--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -34,7 +34,7 @@
          dos danos UV. A escolha ideal para quem busca mais qualidade de vida e economia.</p>
 </section>
 
-<section class="bg-gray-100">
+<section id="beneficios" class="bg-gray-100">
     <div class="c-container py-32">
         <h1 class="font-normal text-5xl max-w-2xl text-center mx-auto text-gray-600 mb-16">
             <span class="text-black">Oferecemos qualidade,</span> com os melhores materiais e serviço
@@ -43,7 +43,7 @@
     </div>
 </section>
 
-<section>
+<section id="servicos">
     <div class="c-container py-32">
         <h1 class="font-normal text-5xl max-w-2xl text-center mx-auto text-gray-600 mb-16">
             Acompanhe alguns de nossos projetos e veja a <span class="text-black">qualidade do nosso trabalho</span>
