--- a/src/app/components/layout/video-card/video-card.component.html
+++ b/src/app/components/layout/video-card/video-card.component.html
@@ -8,7 +8,8 @@
                     <div>
                         <h2 class="text-2xl font-bold mb-4 md:mb-10">{{card.title}}</h2>
                         <p class="text-gray-600 text-lg mb-6">{{card.description}}</p>
-                        <button class="bg-green-400 py-2 px-6 text-lg font-medium rounded-full">Solicitar orçamento</button>
+                        <button class="bg-green-400 text-black py-2 px-6 text-lg font-medium rounded-full
+                        hover:brightness-105 active:brightness-110 transition">Solicitar orçamento</button>
                     </div>
                     <p class="text-gray-600">{{card.footer1}} <span class="text-black font-medium">{{card.footer2}}</span></p>
                 </div>
@@ -20,7 +21,7 @@
                     </video>
                     <a href="https://www.instagram.com/ajufilms/" target="_blank" class="absolute right-1/2 
                     translate-x-1/2 bottom-8 bg-black px-4 py-2 bg-opacity-40 
-                    backdrop-blur-sm whitespace-nowrap rounded-full text-white
+                    backdrop-blur-lg whitespace-nowrap rounded-full text-white
                     opacity-60 text-sm hover:opacity-85 active:opacity-100 transition"
                     >Ver mais no instagram</a>
                 </div>
