--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,7 +6,8 @@
         <header class="relative text-white self-center flex flex-col items-center text-center -mt-28 md:mt-0 md:text-start md:items-start">
             <p class="text-xl font-light">Serviço número 01 de películas em Aracaju</p>
             <h1 class="text-[3.5rem] xs:text-[4.2rem] font-medium leading-tight max-w-2xl">A proteção que seu ambiente precisa!</h1>
-            <button class="bg-stone-50 text-stone-950 py-2 px-6 rounded-full text-lg font-semibold mt-4">Fazer orçamento</button>
+            <button class="bg-stone-50 text-stone-950 py-2 px-6 rounded-full text-lg font-semibold mt-4
+            hover:opacity-90 active:opacity-85 transition-opacity">Fazer orçamento</button>
         </header>
         <div class="main-card-info bg-white self-end absolute translate-x-1/2 right-1/2 md:translate-x-0 md:right-0 
         w-[calc(100%-40px)] sm:w-[calc(100%-80px)] md:max-w-[50%] xl:p-8 p-5 md:rounded-tr-none rounded-tr-3xl 
@@ -28,7 +29,8 @@
 </div>
 
 <section class="c-container py-32 flex gap-12 items-center text-gray-600">
-    <h3 class="text-4xl flex-1"><span class="text-black font-medium">Priorizamos qualidade,</span> garantindo a confiança dos nossos clientes em cada serviço.</h3>
+    <h3 class="text-4xl flex-1"><span class="text-black font-medium">
+        Priorizamos qualidade,</span> garantindo a confiança dos nossos clientes em cada serviço.</h3>
     <p class="flex-1">Oferecemos películas residenciais que garantem proteção solar, aumentam a privacidade e 
         reduzem o consumo de energia. Nossas soluções melhoram o conforto térmico e protegem sua casa
          dos danos UV. A escolha ideal para quem busca mais qualidade de vida e economia.</p>
