feat: add footer

--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -14,7 +14,7 @@ transition-all border-b"
             <ul class="flex gap-12">
                 <li class="hidden md:inline"><a href="#beneficios">Benefícios</a></li>
                 <li class="hidden md:inline"><a href="#servicos">Nossos serviços</a></li>
-                <li class="hidden lg:inline"><a href="#">Contato</a></li>
+                <li class="hidden lg:inline"><a href="#footer">Contato</a></li>
             </ul>
         </nav>
         <button class="py-2 px-4 rounded-full font-medium text-sm transition-colors"
