--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
     <img src="/images/windows.jpg" alt="Janela de prédio com vista para a cidade"
     class="absolute building h-full w-full object-cover brightness-75">
 
-    <main class="c-container z-10 h-full grid grid-cols-1 lg:grid-cols-2 gap-6">
+    <main id="home" class="c-container z-10 h-full grid grid-cols-1 lg:grid-cols-2 gap-6">
         <header class="relative text-white self-center flex flex-col items-center text-center -mt-28 md:mt-0 md:text-start md:items-start">
             <p class="text-xl font-light">Serviço número 01 de películas em Aracaju</p>
             <h1 class="text-[3.5rem] xs:text-[4.2rem] font-medium leading-tight max-w-2xl">A proteção que seu ambiente precisa!</h1>
@@ -53,3 +53,9 @@
         <app-video-card/>
     </div>
 </section>
+
+<footer id="footer" class="bg-black text-white pt-32">
+    <div class="c-container">
+        <app-footer />
+    </div>
+</footer>
