feat(footer): change footer layout

--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -1,41 +1,20 @@
-<div class="grid grid-cols-[1fr.6fr] gap-x-14 gap-y-6 grid-rows-2">
-    <div>
-        <h2 class="text-5xl mb-6">Transformamos ambientes <span class="text-gray-600">com conforto, eficiência e estética!</span></h2>
-        <div class="flex items-center gap-4">
-            <div class="text-sm flex items-center gap-2">
-                <i class="fi fi-ss-check-circle text-green-500 flex"></i>
-                <span class="font-light">Mais de 7 anos de serviço com qualidade</span>
-            </div>
-            <div class="text-sm flex items-center gap-2">
-                <i class="fi fi-ss-check-circle text-green-500 flex"></i>
-                <span class="font-light">Atendimento personalizado para cada necessidade</span>
-            </div>
-        </div>
-    </div>
-    <div>
-        <p class="font-light mb-6">Com ampla experiência no mercado, utilizamos películas de alta qualidade, modernizando a estética dos ambientes e oferecendo proteção solar e privacidade duradoura.</p>
-        <button class="px-6 py-2 bg-white text-black rounded-full transition-opacity hover:opacity-90">Entre em contato</button>
+<div class="flex flex-col gap-6">
+    <div class="flex flex-col items-center">
+        <span class="font-['Avenida',sans-serif] text-6xl">AJU FILMS</span>
+        <h2 class="text-4xl max-w-2xl text-center">Transformamos ambientes <span class="text-gray-600">com conforto, eficiência e estética!</span></h2>
     </div>
     <div class="col-span-2 flex flex-col">
-        <div class="pb-10 border-b border-neutral-700 flex items-center justify-between">
-            <span class="font-['Avenida',sans-serif] text-5xl">AJU FILMS</span>
-            <nav>
-                <ul class="flex items-center gap-12">
-                    <li><a href="#home" class="text-white hover:text-neutral-300 transition-colors">Home</a></li>
-                    <li><a href="#beneficios" class="text-white hover:text-neutral-300 transition-colors">Benefícios</a></li>
-                    <li><a href="#servicos" class="text-white hover:text-neutral-300 transition-colors">Serviços</a></li>
-                </ul>
-            </nav>
-            <div class="flex items-center gap-4 flex-wrap">
-                <a href="#" class="rounded-full bg-neutral-700 p-4 transition-colors hover:bg-neutral-600 active:bg-neutral-500">
+        <div class="pb-6 border-b border-neutral-900 flex items-center justify-center">
+            <div class="flex items-center flex-wrap">
+                <a href="#" class="rounded-xl rounded-r-none bg-neutral-900 p-4 transition-colors hover:bg-neutral-800 active:bg-neutral-700">
                     <i class="fi fi-brands-instagram flex"></i>
                 </a>
-                <a href="#" class="rounded-full bg-neutral-700 p-4 transition-colors hover:bg-neutral-600 active:bg-neutral-500">
+                <a href="#" class="rounded-xl rounded-l-none bg-neutral-900 p-4 transition-colors hover:bg-neutral-800 active:bg-neutral-700">
                     <i class="fi fi-brands-whatsapp flex"></i>
                 </a>
             </div>
         </div>
-        <div class="py-10 flex items-center justify-between font-light">
+        <div class="py-6 flex items-center justify-between font-light gap-6">
             <span> &copy; 2024 AjuFilms. Todos direitos reservados </span>
             <span>Desenvolvido por <a href="https://github.com/edumoreiira" target="_blank"
             class="font-normal hover:text-neutral-300 transition-colors">Eduardo Moreira</a></span>
