--- a/src/app/components/layout/video-card/video-card.component.html
+++ b/src/app/components/layout/video-card/video-card.component.html
@@ -2,16 +2,29 @@
 
     @for (card of videoCards; track card.id) { 
         @if(card.id === selectedVideoCard) {
-            <div class="flex flex-col-reverse sm:flex-row gap-0 lg:gap-12 max-h-full sm:h-[25rem]"
-            [@fadeSlide]="animationState">
-                <div class="flex flex-col flex-grow justify-between gap-6 p-10">
+            <div class="flex flex-col-reverse sm:flex-row gap-0 lg:gap-12 max-h-full sm:h-[28rem] lg:h-[25rem]">
+                <div class="flex flex-col-reverse flex-grow justify-end gap-6 p-10">
                     <div>
-                        <h2 class="text-2xl font-bold mb-4 md:mb-10">{{card.title}}</h2>
+                        <h2 class="text-2xl font-bold mb-2 md:mb-4">{{card.title}}</h2>
                         <p class="text-gray-600 text-lg mb-6">{{card.description}}</p>
                         <button class="bg-green-400 text-black py-2 px-6 text-lg font-medium rounded-full
                         hover:brightness-105 active:brightness-110 transition">Solicitar orçamento</button>
                     </div>
-                    <p class="text-gray-600">{{card.footer1}} <span class="text-black font-medium">{{card.footer2}}</span></p>
+                    <div class="flex items-center self-start gap-6 py-2 px-4 bg-gray-200 rounded-2xl">
+                        @for (card of videoCards; track card.id) {
+                            <div class="flex flex-col-reverse gap-1 justify-center cursor-pointer group"
+                            (click)="setVideoCard(card.id)">
+                                <div class="h-[2px] bg-gray-300 rounded-full">
+                                    <div class="h-[2px] rounded-full bg-green-400 transition-all ease-linear" [style.width.%]="card.progress"></div>
+                                </div>
+                                <button class="group-hover:text-black transition-colors cursor-pointer flex items-center gap-2 text-xs"
+                                [ngClass]="{'text-black' : card.id === selectedVideoCard, 'text-gray-400': card.id !== selectedVideoCard}">
+                                    <i [class]="'fi flex ' + card.barIcon"></i>
+                                    <span class="font-light">{{card.barText}}</span>
+                                </button>
+                            </div>
+                        }
+                    </div>
                 </div>
                 <div class="relative h-full flex-shrink-0 p-3">
                     <video #videoRef videoLazyLoad class="max-h-full aspect-[1.4/1] mx-auto w-[min(600px,100%)] 
@@ -27,21 +40,5 @@
                 </div>
             </div>
         }
-    }
-</div>
-
-<div class="flex items-center justify-center mt-6 gap-6">
-    @for (card of videoCards; track card.id) {
-        <div class="flex flex-col gap-2 justify-center">
-            <div class="h-[3px] bg-gray-200">
-                <div class="h-[3px] bg-green-400 transition-all ease-linear" [style.width.%]="card.progress"></div>
-            </div>
-            <button class="hover:text-black transition-colors cursor-pointer flex items-center gap-2"
-            [ngClass]="{'text-black' : card.id === selectedVideoCard, 'text-gray-400': card.id !== selectedVideoCard}"
-            (click)="setVideoCard(card.id)">
-                <i [class]="'fi flex ' + card.barIcon"></i>
-                <span class="font-light text-sm">{{card.barText}}</span>
-            </button>
-        </div>
     }
 </div>
