--- a/src/app/components/layout/video-card/video-card.component.html
+++ b/src/app/components/layout/video-card/video-card.component.html
@@ -2,26 +2,21 @@
 
     @for (card of videoCards; track card.id) { 
         @if(card.id === selectedVideoCard) {
-            <div class="flex flex-col-reverse sm:flex-row gap-0 lg:gap-12 max-h-full sm:h-[28rem] lg:h-[25rem]">
-                <div class="flex flex-col-reverse flex-grow justify-end gap-6 p-10 sm:pt-10 pt-4">
+            <div class="flex flex-col-reverse sm:flex-row gap-0 lg:gap-12 max-h-full sm:h-[25rem]">
+                <div class="flex flex-col flex-grow justify-between gap-10 p-10">
                     <div [@fadeSlide]="'up'">
                         <h2 class="text-2xl font-bold mb-2 md:mb-4">{{card.title}}</h2>
                         <p class="text-gray-600 text-lg mb-6">{{card.description}}</p>
                         <button class="bg-green-400 text-black py-2 px-6 text-lg font-medium rounded-full
                         hover:brightness-105 active:brightness-110 transition">Solicitar orçamento</button>
                     </div>
-                    <div class="flex items-center self-center sm:self-start gap-6 py-2 px-4 bg-gray-200 rounded-2xl">
+                    <div class="flex items-center self-center sm:self-start gap-6 py-2 px-4 rounded-2xl w-[min(30rem,100%)]">
                         @for (card of videoCards; track card.id) {
-                            <div class="flex flex-col-reverse gap-1 justify-center cursor-pointer group"
+                            <div class="flex flex-grow flex-col-reverse gap-1 justify-center cursor-pointer group"
                             (click)="setVideoCard(card.id)">
-                                <div class="h-[2px] bg-gray-300 rounded-full">
-                                    <div class="h-[2px] rounded-full bg-green-400 transition-all ease-linear" [style.width.%]="card.progress"></div>
+                                <div class="h-[5px] bg-gray-300 rounded-full">
+                                    <div class="h-[5px] rounded-full bg-green-400 transition-all ease-linear" [style.width.%]="card.progress"></div>
                                 </div>
-                                <button class="group-hover:text-black transition-colors cursor-pointer flex items-center gap-2 text-xs"
-                                [ngClass]="{'text-black' : card.id === selectedVideoCard, 'text-gray-400': card.id !== selectedVideoCard}">
-                                    <i [class]="'fi flex ' + card.barIcon"></i>
-                                    <span class="font-light">{{card.barText}}</span>
-                                </button>
                             </div>
                         }
                     </div>
