feat: add intersection animations

--- a/src/app/components/layout/cards-section/cards-section.component.html
+++ b/src/app/components/layout/cards-section/cards-section.component.html
@@ -1,11 +1,11 @@
 <div class="grid grid-cols-[repeat(auto-fit,_minmax(300px,_1fr))] m-px rounded-3xl border border-gray-200 overflow-clip gap-px
-bg-gray-200">
+bg-gray-200" InterObs obsClass="fade-in" [intersectChild]="true">
 
     @for(card of cards; track $index) {
         <div class="bg-white flex flex-col sm:items-start items-center sm:gap-6 sm:p-8 gap-4 p-6
-        sm:text-start text-center">
-            <div class="p-4 shadow-md rounded-lg">
-                <i [class]="'fi flex text-green-400 text-xl ' + card.icon"></i>
+        sm:text-start text-center delay-{{$index+1}}">
+            <div class="p-4 shadow-md rounded-xl">
+                <i [class]="'fi flex text-primary text-xl ' + card.icon"></i>
             </div>
             <div>
                 <h4 class="font-medium text-xl leading-8">{{card.title}}</h4>
