--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -1,11 +1,11 @@
-<div class="flex flex-col gap-6">
+<div class="flex flex-col gap-6" InterObs obsClass="fade-in" [intersectChild]="true">
     <div class="flex flex-col items-center">
         <span class="font-['Avenida',sans-serif] text-6xl">AJU FILMS</span>
         <h2 class="text-4xl max-w-2xl text-center">Transformamos ambientes <span class="text-gray-600">com conforto, eficiência e estética!</span></h2>
     </div>
-    <div class="col-span-2 flex flex-col">
+    <div class="col-span-2 flex flex-col delay-1">
         <div class="pb-6 border-b border-neutral-900 flex items-center justify-center">
-            <div class="flex items-center flex-wrap">
+            <div class="flex items-center">
                 <a href="#" class="rounded-xl rounded-r-none bg-neutral-900 p-4 transition-colors hover:bg-neutral-800 active:bg-neutral-700">
                     <i class="fi fi-brands-instagram flex"></i>
                 </a>
@@ -15,7 +15,10 @@
             </div>
         </div>
         <div class="py-6 flex items-center justify-between font-light gap-6">
-            <span> &copy; 2024 AjuFilms. Todos direitos reservados </span>
+            <div>
+                <span>&copy; 2024 AjuFilms. Todos direitos reservados </span>
+                <span class="block">CNPJ: 43.274.013/0001-61.</span>
+            </div>
             <span>Desenvolvido por <a href="https://github.com/edumoreiira" target="_blank"
             class="font-normal hover:text-neutral-300 transition-colors">Eduardo Moreira</a></span>
         </div>
