--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -7,7 +7,8 @@ transition-all border-b"
     }">
     <div>
         <span style="font-family: 'Avenida';"
-        class="text-[3.7rem] leading-none text-nowrap">AJU FILMS</span>
+        class="text-[3.7rem] leading-none text-nowrap transition-all duration-400"
+        [ngClass]="isScrolled ? 'text-[3rem]' : 'text-[3.7rem]'">AJU FILMS</span>
     </div>
     <div class="flex flex-grow justify-between items-center">
         <nav class="mx-auto">
