--- a/src/app/components/layout/video-card/video-card.component.html
+++ b/src/app/components/layout/video-card/video-card.component.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-100 rounded-3xl relative overflow-hidden">
+<div class="bg-gray-100 rounded-3xl relative overflow-hidden" InterObs obsClass="fade-in" [intersectChild]="true">
 
     @for (card of videoCards; track card.id) { 
         @if(card.id === selectedVideoCard) {
@@ -7,7 +7,7 @@
                     <div [@fadeSlide]="'up'">
                         <h2 class="text-2xl font-bold mb-2 md:mb-4">{{card.title}}</h2>
                         <p class="text-gray-600 text-lg mb-6">{{card.description}}</p>
-                        <button class="bg-green-400 text-black py-2 px-6 text-lg font-medium rounded-full
+                        <button class="bg-primary text-white py-2 px-6 text-lg font-medium rounded-full
                         hover:brightness-105 active:brightness-110 transition">Solicitar orçamento</button>
                     </div>
                     <div class="flex items-center self-center sm:self-start gap-6 py-2 px-4 rounded-2xl w-[min(30rem,100%)]">
@@ -15,7 +15,7 @@
                             <div class="flex flex-grow flex-col-reverse gap-1 justify-center cursor-pointer group"
                             (click)="setVideoCard(card.id)">
                                 <div class="h-[5px] bg-gray-300 rounded-full">
-                                    <div class="h-[5px] rounded-full bg-green-400 transition-all ease-linear" [style.width.%]="card.progress"></div>
+                                    <div class="h-[5px] rounded-full bg-primary transition-all ease-linear" [style.width.%]="card.progress"></div>
                                 </div>
                             </div>
                         }
