--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="img-container relative max-h-screen rounded-b-[0em] overflow-hidden">
     <img src="/images/windows.jpg" alt="Janela de prédio com vista para a cidade"
-    class="absolute building h-full w-full object-cover brightness-75">
+    class="absolute building h-full w-full object-cover brightness-90">
 
     <main id="home" class="c-container z-10 h-full grid grid-cols-1 lg:grid-cols-2 gap-6">
-        <header class="relative text-white self-center flex flex-col items-center text-center -mt-28 md:mt-0 md:text-start md:items-start">
+        <header class="relative text-white self-center flex flex-col items-center text-center -mt-28 md:mt-0 md:text-start md:items-start fade-in">
             <p class="text-xl font-light">Serviço número 01 de películas em Aracaju</p>
             <h1 class="text-[3.5rem] xs:text-[4.2rem] font-medium leading-tight max-w-2xl">A proteção que seu ambiente precisa!</h1>
             <button class="bg-stone-50 text-stone-950 py-2 px-6 rounded-full text-lg font-semibold mt-4
@@ -12,15 +12,15 @@
         <div class="main-card-info bg-white self-end absolute translate-x-1/2 right-1/2 md:translate-x-0 md:right-0 
         w-[calc(100%-40px)] sm:w-[calc(100%-80px)] md:max-w-[50%] xl:p-8 p-5 md:rounded-tr-none rounded-tr-3xl 
         rounded-tl-3xl flex items-start gap-6">
-            <div class="flex-1">
+            <div class="flex-1 fade-in delay-1">
                 <h2 class="font-medium xl:text-5xl text-3xl mb-2 text-nowrap">7 anos</h2>
                 <p class="text-gray-600 xl:text-base text-sm">de excelência em aplicação de películas em residências e comércios</p>
             </div>
-            <div class="flex-1">
+            <div class="flex-1 fade-in delay-2">
                 <h2 class="font-medium xl:text-5xl text-3xl mb-2 text-nowrap">2.500+</h2>
                 <p class="text-gray-600 xl:text-base text-sm">janelas transformadas com películas de alta performance</p>
             </div>
-            <div class="flex-1">
+            <div class="flex-1 fade-in delay-3">
                 <h2 class="font-medium xl:text-5xl text-3xl mb-2 text-nowrap">15 tipos</h2>
                 <p class="text-gray-600 xl:text-base text-sm">de películas para garantir proteção solar, privacidade, segurança e estética.</p>
             </div>
@@ -29,32 +29,34 @@
 </div>
 
 <section class="c-container py-32 flex gap-12 items-center text-gray-600">
-    <h3 class="text-4xl flex-1"><span class="text-black font-medium">
-        Priorizamos qualidade,</span> garantindo a confiança dos nossos clientes em cada serviço.</h3>
-    <p class="flex-1">Oferecemos películas residenciais que garantem proteção solar, aumentam a privacidade e 
+    <h3 class="text-4xl flex-1" InterObs obsClass="fade-in"><span class="text-black font-medium">
+        Priorizamos qualidade,</span> garantindo a confiança dos nossos clientes em cada serviço.
+    </h3>
+    <p class="flex-1 delay-1" InterObs obsClass="fade-in" rootMargin="-140px">Oferecemos películas residenciais que garantem proteção solar, aumentam a privacidade e 
         reduzem o consumo de energia. Nossas soluções melhoram o conforto térmico e protegem sua casa
-         dos danos UV. A escolha ideal para quem busca mais qualidade de vida e economia.</p>
+         dos danos UV. A escolha ideal para quem busca mais qualidade de vida e economia.
+    </p>
 </section>
 
-<section id="beneficios" class="bg-gray-100">
+<section id="beneficios" class="bg-gray-100 overflow-hidden">
     <div class="c-container py-32">
-        <h1 class="font-normal text-5xl max-w-2xl text-center mx-auto text-gray-600 mb-16">
+        <h1 class="font-normal text-5xl max-w-2xl text-center mx-auto text-gray-600 mb-16" InterObs obsClass="fade-in">
             <span class="text-black">Oferecemos qualidade,</span> com os melhores materiais e serviço
         </h1>
         <app-cards-section/>
     </div>
 </section>
 
-<section id="servicos">
+<section id="servicos" class="overflow-hidden">
     <div class="c-container py-32">
-        <h1 class="font-normal text-5xl max-w-2xl text-center mx-auto text-gray-600 mb-16">
+        <h1 class="font-normal text-5xl max-w-2xl text-center mx-auto text-gray-600 mb-16" InterObs obsClass="fade-in">
             Acompanhe alguns de nossos projetos e veja a <span class="text-black">qualidade do nosso trabalho</span>
         </h1>
         <app-video-card/>
     </div>
 </section>
 
-<footer id="footer" class="bg-black text-white pt-32">
+<footer id="footer" class="bg-black text-white pt-32 overflow-hidden">
     <div class="c-container">
         <app-footer />
     </div>
