--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -6,10 +6,14 @@
     <div class="col-span-2 flex flex-col delay-1">
         <div class="pb-6 border-b border-neutral-900 flex items-center justify-center">
             <div class="flex items-center">
-                <a href="#" class="rounded-xl rounded-r-none bg-neutral-900 p-4 transition-colors hover:bg-neutral-800 active:bg-neutral-700">
+                <a href="https://www.instagram.com/ajufilms/" class="rounded-xl rounded-r-none bg-neutral-900 p-4 
+                transition-colors hover:bg-neutral-800 active:bg-neutral-700" target="_blank" title="Instagram"
+                aria-label="Ir para nosso instagram">
                     <i class="fi fi-brands-instagram flex"></i>
                 </a>
-                <a href="#" class="rounded-xl rounded-l-none bg-neutral-900 p-4 transition-colors hover:bg-neutral-800 active:bg-neutral-700">
+                <a href="https://wa.me/+5579996121414?text=Ol%C3%A1,%20desejo%20solicitar%20um%20or%C3%A7amento!" 
+                class="rounded-xl rounded-l-none bg-neutral-900 p-4 transition-colors hover:bg-neutral-800 
+                active:bg-neutral-700" target="_blank" title="Whatsapp" aria-label="Ir para nosso whatsapp">
                     <i class="fi fi-brands-whatsapp flex"></i>
                 </a>
             </div>
@@ -20,7 +24,8 @@
                 <span class="block">CNPJ: 43.274.013/0001-61.</span>
             </div>
             <span>Desenvolvido por <a href="https://github.com/edumoreiira" target="_blank"
-            class="font-normal hover:text-neutral-300 transition-colors">Eduardo Moreira</a></span>
+            class="font-normal hover:text-neutral-300 transition-colors"
+            aria-label="Ir para github do desenvolvidor">Eduardo Moreira</a></span>
         </div>
     </div>
 </div>
