--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,13 +4,13 @@
 
     <main id="home" class="c-container z-10 h-full grid grid-cols-1 lg:grid-cols-2 gap-6">
         <header class="relative text-white self-center flex flex-col items-center text-center -mt-28 md:mt-0 md:text-start md:items-start fade-in">
-            <p class="text-xl font-light">Serviço número 01 de películas em Aracaju</p>
             <h1 class="text-[3.5rem] xs:text-[4.2rem] font-medium leading-tight max-w-2xl">A proteção que seu ambiente precisa!</h1>
-            <button class="bg-stone-50 text-stone-950 py-2 px-6 rounded-full text-lg font-semibold mt-4
-            hover:opacity-90 active:opacity-85 transition-opacity">Fazer orçamento</button>
+            <a class="bg-stone-50 text-stone-950 py-2 px-6 rounded-full text-lg font-semibold mt-4
+            hover:opacity-90 active:opacity-85 transition-opacity"
+            href="https://wa.me/+5579996121414?text=Ol%C3%A1,%20desejo%20solicitar%20um%20or%C3%A7amento!" target="_blank">Fazer orçamento</a>
         </header>
         <div class="main-card-info bg-white self-end absolute translate-x-1/2 right-1/2 md:translate-x-0 md:right-0 
-        w-[calc(100%-40px)] sm:w-[calc(100%-80px)] md:max-w-[50%] xl:p-8 p-5 md:rounded-tr-none rounded-tr-3xl 
+        w-[calc(100%-40px)] sm:w-[calc(100%-80px)] md:max-w-[50%] xl:p-8 p-6 pb-0 md:rounded-tr-none rounded-tr-3xl 
         rounded-tl-3xl flex items-start gap-6">
             <div class="flex-1 fade-in delay-1">
                 <h2 class="font-medium xl:text-5xl text-3xl mb-2 text-nowrap">7 anos</h2>
@@ -40,17 +40,16 @@
 
 <section id="beneficios" class="bg-gray-100 overflow-hidden">
     <div class="c-container py-32">
-        <h1 class="font-normal text-5xl max-w-2xl text-center mx-auto text-gray-600 mb-16" InterObs obsClass="fade-in">
-            <span class="text-black">Oferecemos qualidade,</span> com os melhores materiais e serviço
-        </h1>
+        <h1 class="font-normal text-4xl max-w-2xl text-center mx-auto text-gray-600 mb-16" InterObs obsClass="fade-in">
+            <span class="text-black">Oferecemos modernidade,</span> com produtos e serviços de excelência</h1>
         <app-cards-section/>
     </div>
 </section>
 
 <section id="servicos" class="overflow-hidden">
     <div class="c-container py-32">
-        <h1 class="font-normal text-5xl max-w-2xl text-center mx-auto text-gray-600 mb-16" InterObs obsClass="fade-in">
-            Acompanhe alguns de nossos projetos e veja a <span class="text-black">qualidade do nosso trabalho</span>
+        <h1 class="font-normal text-4xl max-w-2xl text-center mx-auto text-gray-600 mb-16" InterObs obsClass="fade-in">
+            Explore nossos projetos e veja como unimos <span class="text-black">funcionalidade e design em cada aplicação</span>
         </h1>
         <app-video-card/>
     </div>
