--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -13,14 +13,26 @@ transition-all border-b"
     <div class="flex flex-grow justify-between items-center">
         <nav class="mx-auto">
             <ul class="flex gap-12">
-                <li class="hidden md:inline"><a href="#beneficios">Benefícios</a></li>
-                <li class="hidden md:inline"><a href="#servicos">Nossos serviços</a></li>
-                <li class="hidden lg:inline"><a href="#footer">Contato</a></li>
+                <li class="hidden md:inline">
+                    <a class=" transition-colors" 
+                    [ngClass]="isScrolledLimit ? 'hover:text-neutral-500' : 'hover:text-neutral-100'" href="#beneficios"
+                    >Benefícios</a>
+                </li>
+                <li class="hidden md:inline">
+                    <a class=" transition-colors" 
+                    [ngClass]="isScrolledLimit ? 'hover:text-neutral-500' : 'hover:text-neutral-100'" href="#servicos"
+                    >Nossos serviços</a>
+                </li>
+                <li class="hidden lg:inline">
+                    <a class=" transition-colors" 
+                    [ngClass]="isScrolledLimit ? 'hover:text-neutral-500' : 'hover:text-neutral-100'" href="#footer"
+                    >Contato</a>
+                </li>
             </ul>
         </nav>
-        <button class="py-2 px-4 rounded-full font-medium text-sm transition-colors"
+        <a class="py-2 px-4 rounded-full font-medium text-sm transition-colors"
         [ngClass]="
         isScrolledLimit ? 'bg-stone-950 text-stone-50 hover:bg-stone-700' : 'bg-stone-50 text-stone-950 hover:bg-stone-200'"
-        >Fazer orçamento</button>
+        href="https://wa.me/+5579996121414?text=Ol%C3%A1,%20desejo%20solicitar%20um%20or%C3%A7amento!" target="_blank">Fazer orçamento</a>
     </div>
 </div>
