--- a/src/app/components/layout/video-card/video-card.component.html
+++ b/src/app/components/layout/video-card/video-card.component.html
@@ -7,17 +7,19 @@
                     <div [@fadeSlide]="'up'">
                         <h2 class="text-2xl font-bold mb-2 md:mb-4">{{card.title}}</h2>
                         <p class="text-gray-600 text-lg mb-6">{{card.description}}</p>
-                        <button class="bg-primary text-white py-2 px-6 text-lg font-medium rounded-full
-                        hover:brightness-105 active:brightness-110 transition">Solicitar orçamento</button>
+                        <a class="bg-primary text-white py-2 px-6 text-lg font-medium rounded-full
+                        hover:brightness-105 active:brightness-110 transition"
+                        href="https://wa.me/+5579996121414?text=Ol%C3%A1,%20desejo%20solicitar%20um%20or%C3%A7amento!"
+                        target="_blank">Solicitar orçamento</a>
                     </div>
                     <div class="flex items-center self-center sm:self-start gap-6 py-2 px-4 rounded-2xl w-[min(30rem,100%)]">
                         @for (card of videoCards; track card.id) {
-                            <div class="flex flex-grow flex-col-reverse gap-1 justify-center cursor-pointer group"
-                            (click)="setVideoCard(card.id)">
-                                <div class="h-[5px] bg-gray-300 rounded-full">
+                            <button class="flex flex-grow flex-col-reverse gap-1 justify-center cursor-pointer group"
+                            (click)="setVideoCard(card.id)" [attr.aria-label]="'Mudar para vídeo ' + card.title">
+                                <div class="w-full h-[5px] bg-gray-300 rounded-full">
                                     <div class="h-[5px] rounded-full bg-primary transition-all ease-linear" [style.width.%]="card.progress"></div>
                                 </div>
-                            </div>
+                            </button>
                         }
                     </div>
                 </div>
