--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,9 @@
     src: url(../public/fonts/avenida-std.otf);
 }
 
+html {
+    scroll-behavior: smooth;
+}
 
 * {
     font-family: Inter, sans-serif;
