--- a/src/app/components/layout/video-card/video-card.component.html
+++ b/src/app/components/layout/video-card/video-card.component.html
@@ -24,10 +24,10 @@
                     </div>
                 </div>
                 <div class="relative h-full flex-shrink-0 p-3" [@fadeSlide]="'noslide'">
-                    <video #videoRef videoLazyLoad class="max-h-full aspect-[1.4/1] mx-auto w-[min(600px,100%)] 
+                    <video #videoRef class="max-h-full aspect-[1.4/1] mx-auto w-[min(600px,100%)] 
                     sm:aspect-auto h-auto sm:h-full sm:w-60 md:w-80 object-cover rounded-2xl skeleton" [muted]="true" autoplay
                     (timeupdate)="updateProgress(videoRef)" (click)="togglePause(videoRef)" (ended)="onVideoEnd()"
-                    [attr.data-src]="card.videoUrl" type="video/mp4" (loadeddata)="onLoadedVideo($event)">
+                    [src]="card.videoUrl" type="video/mp4" (canplaythrough)="onLoadedVideo($event)">
                     </video>
                     <a href="https://www.instagram.com/ajufilms/" target="_blank" class="absolute right-1/2 
                     translate-x-1/2 bottom-8 bg-black px-4 py-2 bg-opacity-40 
